--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.3",
     "@nextui-org/react": "^2.1.13",
+    "@prisma/client": "^5.4.1",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
+    "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -20,6 +23,9 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.5",
+    "prisma": "^5.4.1",
     "tailwindcss": "^3"
   }
 }
