--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "redis": "^4.6.10"
   },
   "devDependencies": {
     "autoprefixer": "^10",
