--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.4.2",
+    "file-type": "^18.5.0",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
